--- a/assignment_1/a1_tutorial.ipynb
+++ b/assignment_1/a1_tutorial.ipynb
@@ -59,7 +59,7 @@
         "# Load the given .csv dataset, check the delimiter\n",
         "# df = ...\n",
         "url = \"https://raw.githubusercontent.com/dsfb2/dsfb2-2023/main/assignment_1/data/a1_tutorial_data.csv\"\n",
-        "df = pd.read_csv(\"data.csv\", delimiter=\";\")"
+        "df = pd.read_csv(url, delimiter=\";\")"
       ],
       "metadata": {
         "id": "-owHLjHL1DkR"
