--- a/assignment_1/a1.ipynb
+++ b/assignment_1/a1.ipynb
@@ -1,21 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "Gwqk8bMv7uky"
+      },
       "source": [
         "# Assignment 1\n",
         "Submission DDL: 01.11.2023 23:59.\n",
@@ -29,13 +18,13 @@
         "\n",
         "\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "Gwqk8bMv7uky"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "RYYIz2Go_xe5"
+      },
       "source": [
         "## Task description\n",
         "*wedeliver*, a food delivery company, has recently expanded to a new market with a city layout different to their homebase. The parametres for delivery time prediction, that are used in the other city, do not work well in the new location. Your task is to find the new parameters for the city and make the revenue sensitivty analysis.\n",
@@ -47,10 +36,7 @@
         "\n",
         "Further description and specific instructions are provided within the course of the assignment. Places, where you need to write your code are commented with capital leters, e.g. #YOUR CODE HERE\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "RYYIz2Go_xe5"
-      }
+      ]
     },
     {
       "cell_type": "code",
@@ -77,6 +63,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "smuJpf3u6BkZ"
+      },
+      "outputs": [],
       "source": [
         "student_number = # WRITE YOUR STUDENT NUMBER HERE. If it contains any letters, just omit them\n",
         "assert type(student_number) is int, \"Exclude letters, leave only numbers\"\n",
@@ -84,80 +75,78 @@
         "# watermark the code\n",
         "%load_ext watermark\n",
         "%watermark  -d -t -v -m -p numpy,pandas,sklearn,matplotlib,seaborn"
-      ],
-      "metadata": {
-        "id": "smuJpf3u6BkZ"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "Next you will load the set of the previous orders, which you will use to obtain the estimates."
-      ],
       "metadata": {
         "id": "5AAliHsI9Ld6"
-      }
+      },
+      "source": [
+        "Next you will load the set of the previous orders, which you will use to obtain the estimates."
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Bw5oZN-O9mDe"
+      },
+      "outputs": [],
       "source": [
         "# load the train dataset from the github repo\n",
         "url_train = \"https://raw.githubusercontent.com/dsfb2/dsfb2-2023/main/assignment_1/data/a1_train.csv\"\n",
         "data_train = pd.read_csv(url_train, sep=\";\", index_col=0)"
-      ],
-      "metadata": {
-        "id": "Bw5oZN-O9mDe"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "b2nrOB8eAemz"
+      },
       "source": [
         "The dataset is simple, it contains only 2 columns: the delivery distance in kilometers and actual delivery time in minutes.\n",
         "* **Task A1** – explore the dataset: provide the summary and visulize the data **(2 points)**"
-      ],
-      "metadata": {
-        "id": "b2nrOB8eAemz"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# YOUR CODE HERE FOR TASK A1 – SUMMARY\n"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "IQa2rWY89G5M"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# YOUR CODE HERE FOR TASK A1 – SUMMARY\n"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "I-urKXJdBsMM"
+      },
+      "outputs": [],
       "source": [
         "# YOUR CODE HERE FOR TASK A1 – VISUALIZATION\n",
         "\n",
         "# ADD A VERBAL SUMMARY OF WHAT YOU'VE LEARNT ABOUT DATA (2-3 SENTENCES) TO AN EMPTY TEXT CELL BELOW"
-      ],
-      "metadata": {
-        "id": "I-urKXJdBsMM"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "CELL FOR A SUMMARY"
-      ],
       "metadata": {
         "id": "B1ISQ37-BxB2"
-      }
+      },
+      "source": [
+        "CELL FOR A SUMMARY"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "Mudgr0mxC_tg"
+      },
       "source": [
         "---\n",
         "The interest of the company is to retain the newcoming customers. The previous analysis has shown, that customers are sensitive to the delivery time. The app, that the company provides, shows the delivery window when the order will arrive. The probability of the customer placing one more order depends on how well you've predicted the time window:\n",
@@ -185,26 +174,28 @@
         "At first, lets create the baseline. The company used to estimate quantile 0.3 for the lower bound of the time window and 0.8 for the upper bound of the time window.\n",
         "* **Task A2** - estimate the upper and lower bound of the time window making the arrival time a linear function of the distance. For the lower bound use the 0.3 quantile, and for the upper bound use 0.8 quantile. **(5 points)**\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "Mudgr0mxC_tg"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "aTfL9RIfUA2_"
+      },
+      "outputs": [],
       "source": [
         "# Create feature matrix\n",
         "\n",
         "# YOUR CODE HERE\n"
-      ],
-      "metadata": {
-        "id": "aTfL9RIfUA2_"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "X2N0FHPgTAbL"
+      },
+      "outputs": [],
       "source": [
         "# Create an empty dictionary named predictions_base, where we store our results\n",
         "predictions_base = # YOUR CODE HERE\n",
@@ -226,15 +217,15 @@
         "plt.xlabel(\"Delivery distance (km)\")\n",
         "plt.ylabel(\"Actual delivery time (mins)\")\n",
         "plt.legend()\n"
-      ],
-      "metadata": {
-        "id": "X2N0FHPgTAbL"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "k0zI3ETzBqf0"
+      },
+      "outputs": [],
       "source": [
         "# functions to calculate the revenue\n",
         "# DO NOT MODIFY THE CELL\n",
@@ -272,39 +263,37 @@
         "  revenue = sum(df_test.order_value*df_test.new_order)*(1-2*q_diff/3)\n",
         "\n",
         "  return np.around(revenue, 2)"
-      ],
-      "metadata": {
-        "id": "k0zI3ETzBqf0"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "GhgKHk3sXXLY"
+      },
+      "outputs": [],
       "source": [
         "# Now lets see what are the revenue based on the current time window parameters\n",
         "base_revenue = calculate_revenue(qr_lower_base.fit(X_train, y_train), qr_upper_base.fit(X_train, y_train), upper_quantile_base-lower_quantile_base)\n",
         "print(f'Current revenue: {base_revenue}')"
-      ],
-      "metadata": {
-        "id": "GhgKHk3sXXLY"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "W5JYI_MMAiqE"
+      },
       "source": [
         "You have just seen how much revenue the company earns using the old approach. The test data set used for the revenue evaluation contains information about 1000 customers who place 12000 orders. If a customer stops ordering, all future orders of this customer will not bring the company any revenue. The probability of placing the next order is based on the actual arrival time of the courier and the time window limits that you predict using the quantile regression.\n",
         "\n",
         "NOTE: The amount of revenue may differ from your peers because the seed for the binomial distribution used to calculate whether a new order will be placed based on the probability of placement is your student number."
-      ],
-      "metadata": {
-        "id": "W5JYI_MMAiqE"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "Bu0XeU17Gux1"
+      },
       "source": [
         "Now that you know the baseline, you will perform the revenue sensitivity analysis\n",
         "\n",
@@ -318,33 +307,33 @@
         "- Report of the results and discussion on revenue sensitivity  **(4 points)**\n",
         "\n",
         "It is important that you explain the approach you take and the results you get. Even if you do not find the global optimum, it is totally fine as long as you explain what, why and how you do and what you get then."
-      ],
-      "metadata": {
-        "id": "Bu0XeU17Gux1"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# YOUR CODE HERE (you can add as many cells as you need)"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "XMeU3yUYGtgJ"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# YOUR CODE HERE (you can add as many cells as you need)"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "CELL FOR THE REPORT"
-      ],
       "metadata": {
         "id": "vNdDSAP6KVty"
-      }
+      },
+      "source": [
+        "CELL FOR THE REPORT"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "KLRvdKaGsqm6"
+      },
       "source": [
         "- **Task C** revenue sensitivity analysis with target on specific areas **(8 points)**\n",
         "\n",
@@ -358,30 +347,76 @@
         "Below is a new revenue calculation function. Now you need to pass the estimators for the special treatment group to the function. The report should also be about 10 sentences long.\n",
         "\n",
         "It is important that you explain the approach you take and the results you get. Even if you do not find the global optimum, it is totally fine as long as you explain what, why and how you do and what you get then."
-      ],
-      "metadata": {
-        "id": "KLRvdKaGsqm6"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
       "source": [
-        "# YOUR CODE HERE (you can add as many cells as you need)"
-      ],
+        "# calculate revenue based on the orders that are placed\n",
+        "def calculate_revenue_focus(regressor_lower_quantile_fit, regressor_upper_quantile_fit, q_diff, regressor_lower_focus, regressor_upper_focus):\n",
+        "  url_test = \"https://raw.githubusercontent.com/dsfb2/dsfb2-2023/main/assignment_1/data/a1_test.csv\"\n",
+        "  df_test = pd.read_csv(url_test, sep=\";\")\n",
+        "  X_test = df_test[\"distance\"].to_numpy().reshape(-1,1)\n",
+        "  df_test[\"lower_bound_usual\"] = regressor_lower_quantile_fit.predict(X_test)\n",
+        "  df_test[\"upper_bound_usual\"] = regressor_upper_quantile_fit.predict(X_test)\n",
+        "  df_test[\"lower_bound_focus\"] = regressor_lower_focus.predict(X_test)\n",
+        "  df_test[\"upper_bound_focus\"] = regressor_upper_focus.predict(X_test)\n",
+        "  df_test[\"lower_bound\"] = np.where(df_test[\"focus\"]==1 , df_test[\"lower_bound_focus\"] , df_test[\"lower_bound_usual\"])\n",
+        "  df_test[\"upper_bound\"] = np.where(df_test[\"focus\"]==1 , df_test[\"upper_bound_focus\"] , df_test[\"upper_bound_usual\"])\n",
+        "  df_test[\"prob\"] = prob_calc(df_test)\n",
+        "  df_test[\"pred_order\"] = df_test.prob.apply(lambda x: np.random.default_rng(seed=student_number).binomial(1, x, 1)[0])\n",
+        "\n",
+        "  customer_id = 0\n",
+        "  df_test['new_order'] = np.nan\n",
+        "\n",
+        "  for i in range(len(df_test.customer_id)):\n",
+        "    if df_test.loc[i, 'customer_id'] == customer_id:\n",
+        "      df_test.loc[i, 'new_order'] = np.minimum(df_test.loc[i, 'pred_order'], df_test.loc[i-1, 'new_order'])\n",
+        "    else:\n",
+        "      customer_id = df_test.loc[i, 'customer_id']\n",
+        "      df_test.loc[i, 'new_order'] = df_test.loc[i, 'pred_order']\n",
+        "\n",
+        "  revenue = sum(df_test.order_value*df_test.new_order)*(1-2*q_diff/3)\n",
+        "\n",
+        "  return np.around(revenue, 2)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "UPq5dUll0i0L"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# YOUR CODE HERE (you can add as many cells as you need)"
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "CELL FOR THE REPORT"
-      ],
       "metadata": {
         "id": "VyfepgROJQza"
-      }
+      },
+      "source": [
+        "CELL FOR THE REPORT"
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
